Cleanup outdated Georgian translations.

--- a/translations/ka/antoinefr-online.json
+++ b/translations/ka/antoinefr-online.json
@@ -8,8 +8,7 @@
         "admin": {
             "settings": {
                 "displaymax": "ნაჩვენები წევრების რაოდენობა",
-                "titleoflist": "სათაური, რომელიც გამოჩნდება სიის ზემოთ",
-                "title": "პარამეტრები"
+                "titleoflist": "სათაური, რომელიც გამოჩნდება სიის ზემოთ"
             }
         }
     }
