--- a/translations/ka/askvortsov-pwa.json
+++ b/translations/ka/askvortsov-pwa.json
@@ -10,8 +10,7 @@
                     "description_text": "აღწერილობის დაყენება შეგიძლიათ თქვენი ადმინისტრატორის დაფის „Basics“ გვერდზე.",
                     "long_name_text": "",
                     "heading": "შესახებ",
-                    "short_name_text": "შეგიძლიათ დააყენოთ მოკლე სახელი 'Basics' გვერდზე თქვენს ადმინისტრატორის დაფაზე.",
-                    "name_text": "შეიყვანეთ გრძელი სახელი, რომელიც უნდა გამოიყენოთ თქვენს PWA-ში."
+                    "short_name_text": "შეგიძლიათ დააყენოთ მოკლე სახელი 'Basics' გვერდზე თქვენს ადმინისტრატორის დაფაზე."
                 },
                 "colors": {
                     "heading": "ფერები",
@@ -42,8 +41,7 @@
                 "no_name": "თქვენ უნდა მიუთითოთ თქვენი აპის სრული სახელი.",
                 "key_gen_failed": "",
                 "suggest_gmp": "",
-                "success": "პოტენციური შეცდომები ვერ მოიძებნა!",
-                "push_needs_gmp_and_web_push": "Gmp PHP გაფართოება და minishlink/web-push ბიბლიოთეკა (კომპოზიტორი მოითხოვს minishlink /web-push) უნდა იყოს ჩართული push შეტყობინებების მუშაობისთვის."
+                "success": "პოტენციური შეცდომები ვერ მოიძებნა!"
             }
         },
         "forum": {
