--- a/translations/ka/clarkwinkelmann-carving-contest.json
+++ b/translations/ka/clarkwinkelmann-carving-contest.json
@@ -46,13 +46,11 @@
                 "view": "ნახეთ მასალა",
                 "like": "Like მასალა",
                 "participate": "მონაწილეობა",
-                "moderate": "ზომიერი",
-                "heading": "კვეთის კონკურსი"
+                "moderate": "ზომიერი"
             },
             "settings": {
                 "maxEntriesPerUser": "მაქსიმალური გაგზავნა თითო მომხმარებელზე",
-                "colorMode": "",
-                "title": "კვეთის კონკურსის პარამეტრები"
+                "colorMode": ""
             },
             "colors": {
                 "simple": "",
