--- a/translations/ka/core.json
+++ b/translations/ka/core.json
@@ -21,8 +21,7 @@
                 "favicon_text": "ატვირთეთ სურათი, რომელიც გამოვა ფორუმის აიქონად.",
                 "logo_heading": "ლოგო",
                 "logo_text": "ატვირთეთ სურათი, რომლითაც გამოყოფილი იქნება ფორუმის სათაური.",
-                "title": "გარეგნობა",
-                "submit_button": ""
+                "title": "გარეგნობა"
             },
             "basics": {
                 "all_discussions_label": "",
@@ -40,9 +39,7 @@
                 "slug_driver_text": "შეარჩიეთ დრაივერი, რომელიც გამოიყენება ამ მოდელის სლუგინგისთვის.",
                 "title": "საფუძვლები",
                 "welcome_banner_heading": "მისალმების ბანერი",
-                "welcome_banner_text": "ტექსტის კონფიგურაცია, რომელიც აჩვენებს ბანერზე ყველა განხილვის გვერდზე. გამოიყენეთ ეს თქვენს ფორუმზე სტუმრების მისასალმებლად.",
-                "saved_message": "თქვენი ცვლილებები შენახულია.",
-                "submit_button": ""
+                "welcome_banner_text": "ტექსტის კონფიგურაცია, რომელიც აჩვენებს ბანერზე ყველა განხილვის გვერდზე. გამოიყენეთ ეს თქვენს ფორუმზე სტუმრების მისასალმებლად."
             },
             "dashboard": {
                 "clear_cache_button": "ქეშის გასუფთავება",
@@ -99,10 +96,7 @@
                 "send_test_mail_success": "მეილის ტესტი წარმატებით გაიგზავნა!",
                 "send_test_mail_text": "ეს გამოგზავნის ელ.ფოსტას ზემოთ მოცემული კონფიგურაციით, თქვენს ელ.ფოსტაზე - {email}.",
                 "smtp_heading": "STMP პარამეტრები",
-                "title": "",
-                "submit_button": "",
-                "heading": "",
-                "text": "დრაივერის, პარამეტრებისა და მისამართების კონფიგურაცია, რომელსაც  თქვენი ფორუმი გამოიყენებს შეტყობინების გასაგზავნად."
+                "title": ""
             },
             "extension": {
                 "configure_scopes": "",
@@ -122,8 +116,7 @@
                 "no_settings": "ამ გაფართოებას არ აქვს პარამეტრები.",
                 "open_modal": "პარამეტრების გახსნა",
                 "permissions_title": "უფლებები",
-                "uninstall_button": "წაშლა",
-                "saved_message": "თქვენი ცვლილებები შენახულია."
+                "uninstall_button": "წაშლა"
             },
             "header": {
                 "get_help": "დახმარების მიღება",
@@ -156,14 +149,7 @@
                 "permissions_title": "",
                 "userlist_button": "",
                 "userlist_title": "",
-                "search_placeholder": "გაფართოებების ძებნა",
-                "appearance_text": "მოირგეთ თქვენი ფორუმის ფერები, ლოგოები და სხვა ცვლადები.",
-                "basics_text": "დააყენეთ თქვენი ფორუმის სათაური, ენა და სხვა ძირითადი პარამეტრები.",
-                "dashboard_text": "თქვენი ფორუმი ერთი შეხედვით.",
-                "email_text": "თქვენი ფორუმის ელ.ფოსტის პარამეტრების კონფიგურაცია.",
-                "extensions_button": "გაფართოებები",
-                "extensions_text": "თქვენს ფორუმს დაამატეთ დამატებითი ფუნქციები და გახადეთ საკუთარი.",
-                "permissions_text": "დააკონფიგურირეთ ვინ რას ხედავს და რას აკეთებს."
+                "search_placeholder": "გაფართოებების ძებნა"
             },
             "permissions": {
                 "allow_post_editing_label": "პოსტის რედაქტირების დაშვება",
@@ -193,9 +179,7 @@
                 "view_forum_label": "",
                 "view_hidden_groups_label": "ფარული ჯგუფის სამკერდე ნიშნების ნახვა",
                 "view_last_seen_at_label": "მომხმარებლის ბოლოს ნანახი დროის ყოველთვის ნახვა",
-                "view_post_ips_label": "პოსტის IP მისამართების ნახვა",
-                "view_discussions_label": "დისკუსიების ნახვა",
-                "view_user_list_label": "მომხმარებლის სიის ნახვა"
+                "view_post_ips_label": "პოსტის IP მისამართების ნახვა"
             },
             "permissions_controls": {
                 "allow_indefinitely_button": "განუსაზღვრელად",
@@ -253,17 +237,6 @@
                 },
                 "title": "",
                 "total_users": ""
-            },
-            "add_extension": {
-                "developer_text": "თუ დეველოპერი ხართ, შეგიძლიათ <a>წაიკითხოთ დოკუმენტები</a> და გაეცნოთ საკუთარი გაფართოებების შექმნას.",
-                "install_text": "ამასობაში, შეგიძლიათ მოძებნოთ გაფართოებები <a>Flarum Community საიტზე</a> და ხელით დააინსტალიროთ კომპოზიტორის გამოყენებით.",
-                "temporary_text": "არც თუ ისე შორეულ მომავალში, ერთ დღეს, ეს დიალოგი საშუალებას მოგცემთ მარტივად დაამატოთ გაფართოება თქვენს ფორუმში. ჩვენ ვსაუბრობთ ეკოსისტემას!",
-                "title": "გაფართოების დამატება"
-            },
-            "extensions": {
-                "add_button": "გაფართოების დამატება",
-                "settings_button": "",
-                "uninstall_button": "ამოშლა"
             }
         },
         "forum": {
@@ -469,20 +442,6 @@
                 "alert_message": "",
                 "resend_button": "ხელახლა გაგზავნეთ დამადასტურებელი ელ.ფოსტა",
                 "sent_message": "გაგზავნილი"
-            },
-            "edit_user": {
-                "activate_button": "გაააქტიურეთ მომხმარებელი",
-                "email_heading": "",
-                "email_label": "",
-                "groups_heading": "ჯგუფები",
-                "password_heading": "",
-                "password_label": "",
-                "set_password_label": "დააყენეთ ახალი პაროლი",
-                "submit_button": "",
-                "title": "მომხმარებლის რედაქტირება",
-                "username_heading": "",
-                "username_label": "",
-                "nothing_available": ""
             }
         },
         "lib": {
