--- a/translations/ka/fof-mason.json
+++ b/translations/ka/fof-mason.json
@@ -89,12 +89,7 @@
                 "fill-fields": "",
                 "update-own-fields": "",
                 "update-other-fields": "",
-                "skip-required-fields": "",
-                "mason-heading": ""
-            },
-            "menu": {
-                "title": "",
-                "description": ""
+                "skip-required-fields": ""
             }
         }
     }
