--- a/translations/ka/fof-moderator-notes.json
+++ b/translations/ka/fof-moderator-notes.json
@@ -18,8 +18,7 @@
                 "noNotes": "",
                 "submit_button": "",
                 "delete": "",
-                "confirm": "",
-                "no_content_given": ""
+                "confirm": ""
             },
             "user": {
                 "notes": ""
