--- a/translations/ka/clarkwinkelmann-group-invitation.json
+++ b/translations/ka/clarkwinkelmann-group-invitation.json
@@ -34,8 +34,7 @@
                 "empty": "",
                 "unlimited": "",
                 "create": "",
-                "delete": "",
-                "title": ""
+                "delete": ""
             }
         },
         "api": {
