--- a/translations/ka/dem13n-discussion-cards.json
+++ b/translations/ka/dem13n-discussion-cards.json
@@ -1,8 +1,7 @@
 {
     "dem13n": {
         "forum": {
-            "replies": "",
-            "last_reply": ""
+            "replies": ""
         },
         "admin": {
             "settings": {
