--- a/translations/ka/jslirola-login2seeplus.json
+++ b/translations/ka/jslirola-login2seeplus.json
@@ -13,13 +13,7 @@
             "image": "",
             "code": "",
             "post": {
-                "title": "",
-                "help": ""
-            },
-            "php": {
-                "title": "",
-                "help": "",
-                "label": ""
+                "title": ""
             }
         }
     }
