--- a/translations/ka/michaelbelgium-profile-views.json
+++ b/translations/ka/michaelbelgium-profile-views.json
@@ -9,8 +9,7 @@
         "admin": {
             "settings": {
                 "track_guests_label": "",
-                "max_viewcount_label": "",
-                "title": ""
+                "max_viewcount_label": ""
             }
         }
     }
