--- a/translations/ka/nearata-copy-code-to-clipboard.json
+++ b/translations/ka/nearata-copy-code-to-clipboard.json
@@ -1,8 +1,7 @@
 {
     "nearata-copy-code-to-clipboard": {
         "forum": {
-            "copy": "",
-            "copied": ""
+            "copy": ""
         }
     }
 }
