--- a/translations/nl/flarum-tags.json
+++ b/translations/nl/flarum-tags.json
@@ -42,8 +42,7 @@
                 "create_secondary_tag_button": "Maak secondaire categorie",
                 "primary_heading": "Primaire categorieën",
                 "secondary_heading": "Secundaire categorieën",
-                "settings_heading": "",
-                "settings_button": "Instellingen"
+                "settings_heading": ""
             }
         },
         "forum": {
