--- a/translations/nl/michaelbelgium-profile-views.json
+++ b/translations/nl/michaelbelgium-profile-views.json
@@ -9,8 +9,7 @@
         "admin": {
             "settings": {
                 "track_guests_label": "Gast views bijhouden",
-                "max_viewcount_label": "Maximum items in bezoekerslijst",
-                "title": "Profielviews instellingen"
+                "max_viewcount_label": "Maximum items in bezoekerslijst"
             }
         }
     }
