--- a/translations/nl/clarkwinkelmann-emojionearea.json
+++ b/translations/nl/clarkwinkelmann-emojionearea.json
@@ -11,9 +11,7 @@
                 "enableTones": "",
                 "filtersPosition": "",
                 "searchPosition": "",
-                "hideFlarumButton": "",
-                "title": "",
-                "hideFlarumButtonHelp": ""
+                "hideFlarumButton": ""
             }
         }
     }
