--- a/translations/nl/fof-forum-statistics-widget.json
+++ b/translations/nl/fof-forum-statistics-widget.json
@@ -13,8 +13,7 @@
             "settings": {
                 "widget_ignore_private_discussions_label": "",
                 "widget_order_label": "Widget Order",
-                "widget_helper_text": "Bewerk deze instelling om de positie van deze widget in het navigatie-gedeelte van je Flarum-forum aan te passen. Hoe hoger het getal, hoe hoger deze widget in de lijst met navigatie-items staat (deze waarde kan positief of negatief zijn).",
-                "title": "Widget instellingen"
+                "widget_helper_text": "Bewerk deze instelling om de positie van deze widget in het navigatie-gedeelte van je Flarum-forum aan te passen. Hoe hoger het getal, hoe hoger deze widget in de lijst met navigatie-items staat (deze waarde kan positief of negatief zijn)."
             },
             "permissions": {
                 "view_discussions_count_label": "",
