Cleanup outdated Sinhala translations.

--- a/translations/si/antoinefr-online.json
+++ b/translations/si/antoinefr-online.json
@@ -8,8 +8,7 @@
         "admin": {
             "settings": {
                 "displaymax": "ප්‍රදර්ශනය කළ සාමාජිකයින් සංඛ්‍යාව",
-                "titleoflist": "",
-                "title": "සැකසුම්"
+                "titleoflist": ""
             }
         }
     }
