--- a/translations/si/core.json
+++ b/translations/si/core.json
@@ -21,8 +21,7 @@
                 "favicon_text": "",
                 "logo_heading": "",
                 "logo_text": "",
-                "title": "",
-                "submit_button": ""
+                "title": ""
             },
             "basics": {
                 "all_discussions_label": "",
@@ -40,9 +39,7 @@
                 "slug_driver_text": "",
                 "title": "",
                 "welcome_banner_heading": "",
-                "welcome_banner_text": "",
-                "saved_message": "",
-                "submit_button": ""
+                "welcome_banner_text": ""
             },
             "dashboard": {
                 "clear_cache_button": "",
@@ -99,8 +96,7 @@
                 "send_test_mail_success": "",
                 "send_test_mail_text": "",
                 "smtp_heading": "",
-                "title": "",
-                "submit_button": ""
+                "title": ""
             },
             "extension": {
                 "configure_scopes": "",
@@ -120,8 +116,7 @@
                 "no_settings": "",
                 "open_modal": "",
                 "permissions_title": "",
-                "uninstall_button": "",
-                "saved_message": ""
+                "uninstall_button": ""
             },
             "header": {
                 "get_help": "",
@@ -184,9 +179,7 @@
                 "view_forum_label": "",
                 "view_hidden_groups_label": "",
                 "view_last_seen_at_label": "",
-                "view_post_ips_label": "",
-                "view_discussions_label": "",
-                "view_user_list_label": ""
+                "view_post_ips_label": ""
             },
             "permissions_controls": {
                 "allow_indefinitely_button": "",
@@ -449,20 +442,6 @@
                 "alert_message": "",
                 "resend_button": "",
                 "sent_message": ""
-            },
-            "edit_user": {
-                "activate_button": "",
-                "email_heading": "",
-                "email_label": "",
-                "groups_heading": "",
-                "password_heading": "",
-                "password_label": "",
-                "set_password_label": "",
-                "submit_button": "",
-                "title": "",
-                "username_heading": "",
-                "username_label": "",
-                "nothing_available": ""
             }
         },
         "lib": {
