--- a/translations/si/askvortsov-pwa.json
+++ b/translations/si/askvortsov-pwa.json
@@ -41,8 +41,7 @@
                 "no_name": "",
                 "key_gen_failed": "",
                 "suggest_gmp": "",
-                "success": "",
-                "push_needs_gmp_and_web_push": ""
+                "success": ""
             }
         },
         "forum": {
